# yandex-to-spotify-txt

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: generate_icon.py
src/yandex_to_spotify/: __main__.py  cli.py  gui.py  matcher.py  models.py  spotify_client.py  transfer.py  yandex_client.py
tests/: test_matcher.py
