[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-to-spotify"
version = "0.1.0"
description = "Import playlists from Yandex Music to Spotify"
requires-python = ">=3.10"
dependencies = [
    "yandex-music>=2.2.0",
    "spotipy>=2.23.0",
    "click>=8.1.7",
    "rich>=13.7.0",
    "python-dotenv>=1.0.0",
    "customtkinter>=5.2.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "Pillow>=10.0"]

[project.scripts]
yandex-to-spotify = "yandex_to_spotify.cli:main"
yandex-to-spotify-gui = "yandex_to_spotify.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yandex_to_spotify = ["assets/*.png"]

[tool.pytest.ini_options]
testpaths = ["tests"]
