[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "yandex-to-spotify-txt"
version = "0.2.0"
description = "Export Yandex Music playlists to plain-text files"
requires-python = ">=3.10"
dependencies = [
    "yandex-music>=2.2.0",
    "python-dotenv>=1.0.0",
    "customtkinter>=5.2.0",
    "pyobjc-framework-Cocoa>=10.0; sys_platform == 'darwin'",
]

[project.optional-dependencies]
dev = ["Pillow>=10.0"]

[project.scripts]
yandex-to-spotify-gui = "yandex_to_spotify.gui:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
yandex_to_spotify = ["assets/*.png"]
